=================================

VERSION 1.5.0
  FEATURES:

  CHANGES:
    Migrated to MediaWiki 1.17 and take use of the Resource Loader
  BUGFIXES:
    Issue 15551 - Average article quality text out of alignment
    Issue 16144 – add attachement to a comment don't work properly
    Issue 16000 - $cegEnableCommentFor=CE_COMMENT_AUTH_ONLY; disables comments for ALL users


VERSION 1.4.0
  FEATURES:
    FR 13053: Included an option to completely delete a comment
    FR 14882: Support attaching links (to files or any other article in the wiki) to comments
    FR 14934: Direct upload of files in the comment form is now possible (with Extension:RichMedia installed)
    Added  profiling information to trace code execution time
    Added a Parser Function to convert binary strings to hex equivalents (to fix HTML ID and jQuery selector issues)
    Added  profiling information to trace code execution time
  CHANGES:
    Issue  14358: Removed localization of parser functions
  BUGFIXES:
    Issue 14481 - Editing of comments was not possible in IE 8
    Issue 14559 - Wiki slows considerable down after installing Collaboration extension
    Issue 14991 - Add style version to css and js includes to improve (loading) performance
    Issue 15104 - Positioning issues when replying on two comments
    Issue 15285 - Comment was replicated not edited


VERSION 1.3.1
  FEATURES:
    FR 13057: Information about last edit of a comment 
  CHANGES:
    Issue 14351: Added a complete sandbox. "Template:Show comments infobox for user" can be used to display an infobox at user pages.
    FR 13548: Small GUI improvements
    Issue 12823: Added average rating per article 
  BUGFIXES:
    Issue 14050: Changed GUI regarding the user edit right.


VERSION 1.3.0

  FEATURES:
    FR 12230: Added a global var (in CE_Initialize.php) to enable/disable the rating mechanism